<resources>
    <string name="app_name">Caturindo</string>
    <string name="label_data_kosong">Data Kosong</string>
    <string name="pilih_jam_mulai">Pilih Jam Mulai</string>
    <string name="pilih_jam_berakhir">Pilih Jam Berakhir</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="describe_your_self">Describe Your Self</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="tidak_memmpunyai_akun">Tidak memmpunyai akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="ganti"> <u>Ganti</u></string>
    <string name="label_upload_file">Upload File</string>
    <string name="list_team">List Team</string>
    <string name="staf_yang_dipilih">Staf yang dipilih</string>
    <string name="jam_mulai_jam_berakhir">Jam mulai - Jam Berakhir</string>
    <string name="catatan">Catatan</string>
    <string name="nama_driver">Nama Driver</string>
    <string name="lokasi">Lokasi</string>
    <string name="judul_task">Judul task</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="waktu">Waktu</string>
    <string name="tanggal">Tanggal</string>
    <string name="nama">Nama</string>
    <string name="username">Username</string>

    <string-array name="string_array_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>
</resources>
