<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".activities.room.RoomDetailActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/img_unchecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_icon_unchecked" />
        <ImageView
            android:id="@+id/img_room_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_unchecked"
            app:srcCompat="@drawable/ic_icon_car_capacity"/>
        <TextView
            android:id="@+id/tv_checkbox_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Available"
            android:textColor="@color/grey_dark"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tv_capacity_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="16"
            android:textColor="@color/grey_dark"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_checkbox_label"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@color/grey_bg"
        app:cardCornerRadius="8dp">
        <RelativeLayout
            android:id="@+id/parent_booking_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="Booking"
                android:textColor="@color/grey_dark"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_btn_booking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/grey_medium"/>
    <LinearLayout
        android:id="@+id/booking_form_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="8dp">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/jam_mulai_jam_berakhir"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/tv_time"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingHorizontal="8dp"
            android:paddingVertical="10dp"
            android:hint="Time"
            android:textColorHint="@color/grey_medium"
            android:background="#FFF9E0"
            android:textColor="@color/grey_dark"
            android:textSize="16sp"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/tanggal"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/tv_date"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:hint="Date"
                android:textColorHint="@color/grey_medium"
                android:background="#FFF9E0"
                android:textColor="@color/grey_dark"
                android:textSize="16sp"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/nama_driver"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/et_driver_name"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:hint="@string/nama_driver"
                android:textColorHint="@color/grey_medium"
                android:background="#FFF9E0"
                android:textColor="@color/grey_dark"
                android:textSize="16sp"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/lokasi"
            android:textColor="@color/black" />


        <EditText

                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"

                android:id="@+id/et_car_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:hint="@string/lokasi"
                android:textColorHint="@color/grey_medium"
                android:background="#FFF9E0"
                android:textColor="@color/grey_dark"
                android:textSize="16sp"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/catatan"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/et_note_car"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:hint="@string/catatan"
                android:textColorHint="@color/grey_medium"
                android:background="#FFF9E0"
                android:textColor="@color/grey_dark"
                android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end">
            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/grey_dark"
                android:background="@drawable/small_button_rounded_gradient"/>
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cancel"
                android:textColor="@color/grey_dark"
                android:background="@drawable/small_button_rounded_gradient"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/grey_medium"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_room_image"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>