<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activities.room.RoomDetailActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/img_unchecked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_icon_unchecked" />

                <ImageView
                    android:id="@+id/img_room_capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_unchecked"
                    app:srcCompat="@drawable/ic_icon_capacity" />

                <TextView
                    android:id="@+id/tv_checkbox_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Available"
                    android:textColor="@color/grey_dark"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_capacity_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="16"
                    android:textColor="@color/grey_dark"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/tv_checkbox_label" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="38dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:cardBackgroundColor="@color/grey_bg"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:id="@+id/parent_booking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="Booking"
                        android:textColor="@color/grey_dark"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_btn_booking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:background="@color/grey_medium" />

            <LinearLayout
                android:id="@+id/booking_form_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="gone">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/jam_mulai_jam_berakhir"
                    android:textColor="@color/black" />



                    <TextView

                        android:layout_marginHorizontal="16dp"
                        android:id="@+id/tv_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="#FFF9E0"
                        android:hint="Time"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="10dp"
                        android:textColor="@color/grey_dark"
                        android:textColorHint="@color/grey_medium"
                        android:textSize="16sp" />


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/tanggal"
                    android:textColor="@color/black" />



                    <TextView

                        android:layout_marginHorizontal="16dp"
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="#FFF9E0"
                        android:hint="Date"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="10dp"
                        android:textColor="@color/grey_dark"
                        android:textColorHint="@color/grey_medium"
                        android:textSize="16sp" />



                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/catatan"
                    android:textColor="@color/black" />


                    <EditText

                        android:layout_marginHorizontal="16dp"
                        android:id="@+id/edt_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="#FFF9E0"
                        android:hint="@string/catatan"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="10dp"
                        android:textColor="@color/grey_dark"
                        android:textColorHint="@color/grey_medium"
                        android:textSize="16sp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/small_button_rounded_gradient"
                        android:text="Save"
                        android:textColor="@color/grey_dark" />

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/small_button_rounded_gradient"
                        android:text="cancel"
                        android:textColor="@color/grey_dark" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="16dp"
                    android:background="@color/grey_medium" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_room_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>